# cursor-multiagent-system

./: .cursorrules  .gitignore  .gitmodules  .pre-commit-config.yaml  ACTIVATION_STATUS.md  ARCHITECTURE.md  CHANGELOG.md  COMO_CLONAR.md  COMO_COMECAR.md  CONFIGURACAO_COMPLETA.md  CONTRIBUTING.md  INDICE_MESTRE.md  LICENSE  MEDIA_PROJECTS.md  MIGRACAO_COMPLETA.md  Makefile  PILOT_PLAN.md  PROJECT_SUMMARY.md  PRONTO_PARA_USAR.md  QUICK_START.md  README.md  REGRAS_CRITICAS.md  REORGANIZACAO_CONTEXTOS.md  SECURITY.md  SISTEMA_PRONTO.md  STATUS_PROJETO.md  TEST_ACTIVATION.md  VALIDACAO_FINAL.md  production_plan.md  requirements.txt
.claude/: CLAUDE.md  settings.json
.claude/commands/: commit.md  handoff.md  review.md  test.md
.cursor/: agents.json
.cursor/agents/: agents
config/: README.md
config/agents/: README.md  social-media-coach.mdc  studies-coach.mdc
config/backups/: INDICE_GERAL_ORIGINAL.md  LEIA-ME_PRIMEIRO.md  PROMPT_RECONSTRUCAO_COMPLETO.md
config/rules/: README.md
core/agents/: README.md  cicd-agent.mdc  freelance-agent.mdc  general-context.mdc  notion-agent.mdc  personal-assistant.mdc  programming.mdc  social-media-assistant.mdc  social-media-coach.mdc  studies-assistant.mdc  studies-coach.mdc  work-assistant.mdc  work-coach.mdc
core/config/: .env.example  README.md  (+2 more)
core/templates/django/: .dockerignore  .editorconfig  .flake8  DJANGO_SERVICE_TEMPLATE.md  Dockerfile  Dockerfile.dev  Dockerfile.prod  Makefile  README.md  conftest.py  entrypoint.sh  pyproject.toml  pytest.ini
core/templates/django/configs/: README.md
docs/: README.md  VERSIONING_GUIDE.md
scripts/: commit-and-push.sh  save-context.sh  save_context.py  setup.sh  validate.sh
skills/: README.md
(+182 files in other folders)
